crates/nash-codegen/src/constant_fold/snapshots/nash_codegen__constant_fold__tests__failed_calls_do_not_stop_folding_or_cleanup.snap
---
source: crates/nash-codegen/src/constant_fold/tests.rs
expression: "format!(\"{}\\n--- isolated pass Core\\n{}\\n--- isolated pass UPLC\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nfixture.code_snapshot(), pretty(after), evaluated.uplc, evaluated.result,\nevaluated.logs)"
---
--- unoptimized Core
constr 0 (divideInteger 1 0) (multiplyInteger (addInteger 20 22) 2)
--- unoptimized UPLC
(program 1.1.0
  (constr 0
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]
    [[(builtin multiplyInteger)
      [[(builtin addInteger) (con integer 20)] (con integer 22)]]
      (con integer 2)]))
--- optimized Core
let anf#1 : int = divideInteger 1 0 in
constr 0 anf#1 84
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 (constr 0 anf_2 (con integer 84)))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- isolated pass Core
let anf#1 : int = divideInteger 1 0 in
constr 0 anf#1 84
--- isolated pass UPLC
(program 1.1.0
  [(lam anf_1 (constr 0 anf_1 (con integer 84)))
    [[(builtin divideInteger) (con integer 1)] (con integer 0)]])
--- result
error: Runtime(DivisionByZero(1, 0))
--- logs
[]
