crates/nash-codegen/src/constant_fold/snapshots/nash_codegen__constant_fold__tests__huge_byte_index.snap
---
source: crates/nash-codegen/src/constant_fold/tests.rs
expression: "format!(\"{}\\n--- result\\n{}\\n--- logs\\n{:?}\", fixture.code_snapshot(),\nfixture.evaluated.result, fixture.evaluated.logs)"
---
--- unoptimized Core
indexByteString (con bytestring #010203) 1606938044258990275541962092341162602522202993782792835301376
--- unoptimized UPLC
(program 1.1.0
  [[(builtin indexByteString) (con bytestring #010203)]
    (con integer 1606938044258990275541962092341162602522202993782792835301376)])
--- optimized Core
indexByteString (con bytestring #010203) 1606938044258990275541962092341162602522202993782792835301376
--- optimized UPLC
(program 1.1.0
  [[(builtin indexByteString) (con bytestring #010203)]
    (con integer 1606938044258990275541962092341162602522202993782792835301376)])
--- result
error: Runtime(ByteStringOutOfBounds([1, 2, 3], 1606938044258990275541962092341162602522202993782792835301376))
--- logs
[]
