crates/nash-codegen/src/constant_fold/snapshots/nash_codegen__constant_fold__tests__memory_exhausted.snap
---
source: crates/nash-codegen/src/constant_fold/tests.rs
expression: "format!(\"{}\\n--- limited pass Core\\n{}\\n--- limited pass UPLC\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nfixture.code_snapshot(), pretty(after), evaluated.uplc, evaluated.result,\nevaluated.logs)"
---
--- unoptimized Core
addInteger 20 22
--- unoptimized UPLC
(program 1.1.0 [[(builtin addInteger) (con integer 20)] (con integer 22)])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- limited pass Core
addInteger 20 22
--- limited pass UPLC
(program 1.1.0 [[(builtin addInteger) (con integer 20)] (con integer 22)])
--- result
(con integer 42)
--- logs
[]
